--- a/styles.css
+++ b/styles.css
@@ -206,4 +206,35 @@ canvas {
     margin: 0;
 }
 
+.delete-task-btn {
+    background-color: transparent; /* Transparent background */
+    color: #fff; /* Text color */
+    border: 2px solid #fff; /* White outline */
+    border-radius: 20px; /* Oval shape */
+    width: 40px; /* Width based on golden ratio */
+    height: 40px; /* Height to maintain oval shape */
+    font-size: 24px; /* Size of the X icon */
+    text-align: center;
+    cursor: pointer;
+    transition: all .2s;
+    position: absolute; /* Position button */
+    top: 10px; /* Adjust as needed */
+    left: 50% - 40px;
+    z-index: 15; /* Ensure button is above other elements */
+    display: none; /* Initially hidden */
+}
+
+.task-container:hover .delete-task-btn {
+    display: inline-block; /* Show delete button on hover */
+}
+
+.delete-task-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.delete-task-btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
   
