--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
 #addTaskBtn {
     background-color: #fff;
     color: #777;
-    border: none;
+    border: 2px solid #fff;
     border-radius: 20px;
     width: calc(40px * 1.618);
     height: 40px;
@@ -62,14 +62,12 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    text-transform: none;
     cursor: pointer;
     transition: all .2s;
     position: absolute;
     top: 20px;
     left: 20px;
     z-index: 5;
-    border: 2px solid #fff;
 }
 
 #addTaskBtn:hover {
@@ -87,7 +85,7 @@ body {
     gap: 10px;
     justify-content: center;
     height: 100vh;
-    padding: 20 50px;
+    padding: 20px 50px;
     box-sizing: border-box;
 }
 
@@ -105,7 +103,6 @@ canvas {
     border-bottom-left-radius: 100px;
     transition: background-color 0.3s ease;
     animation: float 3s ease-in-out infinite;
-
 }
 
 canvas:hover {
@@ -113,35 +110,9 @@ canvas:hover {
 }
 
 @keyframes float {
-    0% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-20px); /* Adjust the value to control the height of the float */
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-.checklist-item-delete {
-    position: absolute;
-    right: 5px;
-    display: none;
-    background-color: transparent;
-    color: #777;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    transition: opacity 0.3s ease;
-}
-
-.checklist-item:hover .checklist-item-delete {
-    display: inline;
-    opacity: 1;
-}
-
-.checklist-item:hover {
-    background-color: #f0f0f0;
+    0% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
+    100% { transform: translateY(0); }
 }
 
 .checklist-popup {
@@ -163,7 +134,6 @@ canvas:hover {
     transition: height 0.8s ease, opacity 0.4s ease;
     height: 0;
     opacity: 0;
-    border: none;
 }
 
 .checklist-input-container {
@@ -171,7 +141,6 @@ canvas:hover {
     align-items: center;
     gap: 10px;
     width: 100%;
-    height: auto;
 }
 
 .checklist-item-text {
@@ -187,7 +156,7 @@ canvas:hover {
 .add-checklist-item {
     background-color: #fff;
     color: #777;
-    border: none;
+    border: 2px solid #fff;
     border-radius: 20px;
     width: 30px;
     height: 30px;
@@ -195,10 +164,8 @@ canvas:hover {
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    text-transform: none;
     cursor: pointer;
     transition: all .2s;
-    border: 2px solid #fff;
 }
 
 .add-checklist-item:hover {
@@ -214,7 +181,6 @@ canvas:hover {
 .checklist-items {
     display: flex;
     flex-direction: column;
-    gap: 5px;
     max-height: auto;
     overflow-y: auto;
     width: 100%;
@@ -224,9 +190,10 @@ canvas:hover {
 }
 
 .checklist-item {
+    position: relative;
+    padding: 5px;
     display: flex;
     align-items: center;
-    gap: 5px;
 }
 
 .checklist-item input {
@@ -234,7 +201,28 @@ canvas:hover {
 }
 
 .checklist-item label {
-    margin: 0;
+    flex: 1;
+    margin: 3px;
+}
+
+.checklist-item-delete {
+    position: absolute;
+    right: 5px;
+    display: none;
+    background-color: transparent;
+    color: #777;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 0 5px;
+}
+
+.checklist-item:hover .checklist-item-delete {
+    display: inline;
+}
+
+.checklist-item:hover {
+    background-color: #f0f0f0;
 }
 
 .delete-task-btn {
@@ -250,7 +238,7 @@ canvas:hover {
     transition: all .2s;
     position: absolute;
     top: 10px;
-    left: 50% - 40px;
+    left: calc(50% - 20px);
     z-index: 15;
     display: none;
 }
