--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #001B2E;
-    margin: 0;
-    padding: 20px;
     display: flex;
+    margin: 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -82,10 +81,10 @@ body {
 
 #tasksContainer {
     display: flex;
-    gap: 10px;
+    gap: 30px;
     justify-content: center;
     height: 100vh;
-    padding: 20px 50px;
+    padding: 20 50px;
     box-sizing: border-box;
 }
 
@@ -94,6 +93,8 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
+    text-align: center;
+    word-wrap: break-word; 
 }
 
 canvas {
@@ -102,7 +103,7 @@ canvas {
     border-bottom-right-radius: 100px;
     border-bottom-left-radius: 100px;
     transition: background-color 0.3s ease;
-    animation: float 3s ease-in-out infinite;
+    animation: float ease-in-out infinite;
 }
 
 canvas:hover {
@@ -110,9 +111,9 @@ canvas:hover {
 }
 
 @keyframes float {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-20px); }
-    100% { transform: translateY(0); }
+    0% { transform: translate(0,0); }
+    50% { transform: translate(0px,-20px); }
+    100% { transform: translate(0,0); }
 }
 
 .checklist-popup {
