--- a/styles.css
+++ b/styles.css
@@ -369,3 +369,25 @@ canvas:hover {
     border-color: white;
     box-shadow: 0 0 3px rgba(0,0,0,0.5);
 }
+
+.delete-task-btn-popup {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #fff;
+    color: #777;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.delete-task-btn-popup:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.delete-task-btn-popup:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
